First commit for assignment 2

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -5,16 +5,18 @@
 <% include partials/navbar.ejs %>
 
 <!-- home page content --> 
-<% include partials/pages/home %>
+<% include partials/pages/home.ejs %>
+
+
 
 <!-- about me page content --> 
 <% include partials/pages/about.ejs %>
 
 <!-- projects page content --> 
-<% include partials/pages/projects %>
+<% include partials/pages/projects.ejs %>
 
 <!-- services page content --> 
-<% include partials/pages/services %>
+<% include partials/pages/services.ejs%>
 
 <!-- contact page content --> 
 <% include partials/pages/contact.ejs %>
