--- a/server/views/partials/footer.ejs
+++ b/server/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <!-- script section -->
    <script src="/jquery/dist/jquery.min.js"></script>
    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="Script/app.js"></script>
+  <script src="Scripts/app.js"></script>
 </body>
 </html>
 
