--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -17,6 +17,13 @@
         <% } %>
 
         <li class="nav-item"> </Li>
+        <% if(title == "Book List") { %>
+        <a class="nav-link active" aria-current="page" href="/book-list"><i class="fas fa-book"></i> Books </a>
+        <% } else { %>
+        <a class="nav-link" aria-current="page" href="/book-list"><i class="fas fa-book"></i> Books </a>
+        <% } %>
+
+        <li class="nav-item"> </Li>
         <% if(title == "About Me") { %>
             <a class="nav-link active" aria-current="page" href="/about"><i class="fas fa-user-circle"></i> About Me</a>
           <% } else { %>
@@ -44,6 +51,16 @@
           <a class="nav-link active" aria-current="page" href="/contact"><i class="fas fa-comments"></i> Contact Me</a>
           <% } else { %>
           <a class="nav-link " aria-current="page" href="/contact"><i class="fas fa-comments"></i> Contact Me</a>
+        <% } %>
+
+        <% if(typeof displayName == 'string' && displayName) {%>
+          <li class="navbar-text"><i class="fas fa-lg fa-user"></i> Welcome, <%= displayName %> </li>
+          <li class="nav-item"><a href="/logout" class="nav-link">
+            <i class="fas fa-lg fa-sign-out-alt "></i> Logout </a></li>
+        <% } else {%>
+          <li class="nav-item"><a href="/login" class="nav-link">
+            <i class="fas fa-lg fa-sign-in-alt"></i> Login </a></li>
+
         <% } %>
 
         
