--- a/server/views/partials/navbar.ejs
+++ b/server/views/partials/navbar.ejs
@@ -17,10 +17,10 @@
         <% } %>
 
         <li class="nav-item"> </Li>
-        <% if(title == "Book List") { %>
-        <a class="nav-link active" aria-current="page" href="/book-list"><i class="fas fa-book"></i> Books </a>
+        <% if(title == "Contact List") { %>
+        <a class="nav-link active" aria-current="page" href="/contact-list"><i class="fas fa-contact"></i> Contacts </a>
         <% } else { %>
-        <a class="nav-link" aria-current="page" href="/book-list"><i class="fas fa-book"></i> Books </a>
+        <a class="nav-link" aria-current="page" href="/contact-list"><i class="fas fa-contact"></i> Contacts </a>
         <% } %>
 
         <li class="nav-item"> </Li>
