added most assignment requirements(sort, etc.)

--- a/server/views/contact/list.ejs
+++ b/server/views/contact/list.ejs
@@ -30,8 +30,8 @@
                      <td class="text-center col-2"><%= ContactList[count].contactNumber %></td>
                      <td class="text-center col-4"><%= ContactList[count].emailAddress %></td>
                      <td class="text-center col-2">
-                        <a href="/contact-list/edit/<%= ContactList[count]._id %>" class="btn btn-primary btn-sm" >
-                        <i class="fas fa-pencil-alt"></i> Edit </a>
+                        <a href="/contact-list/update/<%= ContactList[count]._id %>" class="btn btn-primary btn-sm" >
+                        <i class="fas fa-pencil-alt"></i> Update </a>
                      </td>
                      <td class="text-center col-2">
                         <a href="/contact-list/delete/<%= ContactList[count]._id %>" class="btn btn-danger btn-sm" >
