--- a/server/views/contact/update.ejs
+++ b/server/views/contact/update.ejs
@@ -54,6 +54,8 @@
 
                     <a href="/contact-list" class="btn btn-warning btn-sm">
                         <i class="fas fa-undo"></i> Cancel </a>
+                    <a href="/contact-list/delete/<%= deleteID %>" class="btn btn-danger btn-sm" >
+                        <i class="fas fa-trash-alt"></i> Delete</a>
             </form>
         </div>
     </div>
