fixed an error in update page

--- a/server/views/contact/update.ejs
+++ b/server/views/contact/update.ejs
@@ -28,7 +28,7 @@
                     <input type="text" class="form-control"
                     id="contactNumberTextField"
                     placeholder="Enter the Contact Number"
-                    name="author" 
+                    name="contactNumber" 
                     value="<%= contact.contactNumber %>"
                     required >
                 </div>
